[gd_scene load_steps=6 format=3 uid="uid://sd3ia7d2jqd5"]

[ext_resource type="Script" uid="uid://ceunoliwm3t5r" path="res://enemy.gd" id="1_dx6nr"]
[ext_resource type="Texture2D" uid="uid://bxm6q5earggnj" path="res://Textures/asparagus_PNG25.png" id="1_p1a38"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cr5ae"]
radius = 292.289

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k04tv"]
radius = 26.0
height = 122.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d2m2w"]
radius = 94.0213

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_dx6nr")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_cr5ae")

[node name="AsparagusPng25" type="Sprite2D" parent="."]
position = Vector2(9.34375, -0.218847)
scale = Vector2(0.142889, 0.141505)
texture = ExtResource("1_p1a38")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.4, 1, 0, 1)
offset_left = -57.0
offset_top = 56.0
offset_right = 59.0
offset_bottom = 83.0
scale = Vector2(0.8, 0.8)
value = 100.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_k04tv")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_d2m2w")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_hit_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
